<resources>
    <string name="app_name">Keywords Alert</string>
    <string name="keywords">Keywords</string>
    <string name="websites">Websites</string>
    <string name="keyword_hint">Please enter a keyword</string>
    <string name="website_hint">Please enter a website</string>
    <string name="timer_hint">Please set the checking interval (min)</string>
    <string name="alert_method">Alert Method</string>
    <string name="email">Email</string>
    <string name="notification">Notification</string>
    <string name="set_alert">Set Alert</string>
    <string name="remove_keyword">remove keyword</string>
    <string name="add_keyword">add keyword</string>
    <string name="remove_website">remove website</string>
    <string name="add_website">add website</string>
    <string name="email_hint">Please enter an email</string>
    <string name="results">results</string>
    <string name="resultsII">results:</string>
    <string name="title">title</string>
    <string name="notification_title">New updates</string>
    <string name="notification_text">Keywords has updated</string>
    <string name="NOTIFICATION_CHANNEL_ID">my_ch_01</string>
    <string name="timer">Timer</string>
    <string name="refresh">refresh</string>
    <string name="alert_keyword">Please enter at least one keyword</string>
    <string name="alert_website">Please enter at least one website</string>
    <string name="alert_interval">Please enter an proper checking interval</string>
    <string name="alert_email">Please enter a valid email address</string>
    <string name="results_activity_title">Results:</string>
    <string name="channel_name">Keywords Alert notification channel</string>
    <string name="channel_description">Keywords Alert notification channel</string>
    <string name="start_search">Alert service is on</string>
    <string name="feedback_hint">If you have any comment or suggestion, please contact us. Thank you! (*^_^*) </string>
    <string name="feedback_sent">Your feedback has been sent. Thank you. </string>
    <string name="feedback_fail">Fail to send the feedback, please try again. Thank you. </string>
</resources>
