<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        tools:context="com.example.justforfun.keywordsalert.MainActivity">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/keywords"
            android:textSize="24dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <EditText
                android:id="@+id/input_keyword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/keyword_hint"/>

            <ImageButton
                android:id="@+id/add_keyword"
                android:layout_width="24dp"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:contentDescription="@string/add_keyword"
                android:src="@drawable/ic_add_black_24dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/keywords_container"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:text="@string/websites"
            android:textSize="24sp"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <EditText
                android:id="@+id/input_website"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/website_hint"/>
            <ImageButton
                android:id="@+id/add_website"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_add_black_24dp"
                android:background="?attr/selectableItemBackground"
                android:contentDescription="@string/add_website"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/websites_container"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alert_method"
            android:layout_marginTop="16dp"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="16dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_gravity="center_horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:textSize="18sp"/>

                <CheckBox
                    android:id="@+id/check_Email"
                    android:layout_width="24dp"
                    android:layout_height="24dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/notification"
                    android:textSize="18sp"/>

                <CheckBox
                    android:id="@+id/check_Notification"
                    android:layout_width="24dp"
                    android:layout_height="24dp" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/email_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_marginTop="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/timer"
                android:textSize="25dp"
                />
            <EditText
                android:id="@+id/checking_interval"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Please set the checking interval (min)"
                android:inputType="number"/>
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center">

                <Button
                    android:id="@+id/setAlert"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/set_alert"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center">

                <Button
                    android:id="@+id/results"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/results"/>

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</ScrollView>